--- a/auto/ansible/tasks/install_server_packages.yml
+++ b/auto/ansible/tasks/install_server_packages.yml
@@ -1,39 +1,4 @@
 ---
-- name: (Linux) Install packages for building.
-  ansible.builtin.apt:
-    pkg: "{{ server_packages }}"
-    state: present
-    update_cache: yes
-  when: system.package in ['linux', 'ubuntu']
-
-- name: (FreeBSD) Install packages for building.
-  community.general.pkgng:
-    name: "{{ server_packages }}"
-    state: present
-  when: system.package == 'freebsd'
-
-- name: (NetBSD) Install packages for building.
-  community.general.pkgin:
-    name: "{{ server_packages }}"
-    state: present
-  when: system.package == 'netbsd'
-
-- block:
-  - name: (CentOS) Install EPEL.
-    ansible.builtin.yum:
-      name:
-        - epel-release
-      state: present
-
-  - name: (CentOS) Install packages for building.
-    ansible.builtin.yum:
-      name: "{{ server_packages }}"
-      state: present
-      enablerepo: "{{ enablerepo }}"
-
-  when: system.package == 'centos'
-
-- name: Unknown system; fail the playbook.
-  ansible.builtin.fail:
-    msg: "Unknown system! Cannot install packages!"
-  when: "system.package not in ['linux', 'ubuntu', 'freebsd', 'netbsd', 'centos']"
+- ansible.builtin.include_tasks:
+    file: "tasks/install_server_packages_{{ system.package }}.yml"
+  when: system.package in ['linux', 'freebsd', 'netbsd', 'centos']
