--- a/auto/ansible/network_provision_resolvers-vm.yml
+++ b/auto/ansible/network_provision_resolvers-vm.yml
@@ -4,5 +4,5 @@
   become: true
 
   tasks:
-    - ansible.builtin.import_tasks:
-        file: tasks/network_provision.yml
+    - ansible.builtin.include_tasks:
+        file: "tasks/network_provision_{{ system.network }}.yml"
