--- a/auto/ansible/provision_resolvers-vm.yml
+++ b/auto/ansible/provision_resolvers-vm.yml
@@ -4,8 +4,8 @@
   become: true
 
   tasks:
-    - ansible.builtin.import_tasks:
-        file: tasks/install_generic_packages.yml
+    - ansible.builtin.include_tasks:
+        file: "tasks/install_generic_packages_{{ system.package }}.yml"
 
     - name: Install VM specific packages (part I).
       ansible.builtin.apt:
