For generic packages we need an intermediate steps to set default values

--- a/auto/ansible/provision_gateway-vm.yml
+++ b/auto/ansible/provision_gateway-vm.yml
@@ -4,8 +4,8 @@
   become: true
 
   tasks:
-    - ansible.builtin.include_tasks:
-        file: "tasks/install_generic_packages_{{ system.package }}.yml"
+    - ansible.builtin.import_tasks:
+        file: tasks/install_generic_packages.yml
 
     - name: Install VM specific packages.
       ansible.builtin.apt:
