Disable SELinux on CentOS

--- a/auto/ansible/tasks/network_provision_centos.yml
+++ b/auto/ansible/tasks/network_provision_centos.yml
@@ -1,6 +1,10 @@
 ---
 - name: CentOS network configuration.
   block:
+  - name: (CentOS) Disable SELinux.
+    ansible.posix.selinux:
+      state: disabled
+
   - name: (CentOS) Configure interfaces.
     ansible.builtin.template:
       src: templates/centos_ifcfg.j2
