Add rc.d service files

--- a/auto/ansible/tasks/install_server_service_systemd.yml
+++ b/auto/ansible/tasks/install_server_service_systemd.yml
@@ -1,8 +1,8 @@
 ---
-- name: "Install {{ software_name }} service file."
+- name: "Install {{ service_name }} service file."
   ansible.builtin.template:
     src: "templates/systemd_{{ software_type }}.service.j2"
-    dest: "/lib/systemd/system/{{ software_name }}.service"
+    dest: "/lib/systemd/system/{{ service_name }}.service"
   register: installed
 
 - name: "Reload systemd module."
