--- a/auto/ansible/provision_root-servers.yml
+++ b/auto/ansible/provision_root-servers.yml
@@ -41,8 +41,8 @@
         file: "tasks/install_server_service_{{ system.service }}.yml"
       vars:
         software_type: "{{ item.name | split('-', 1) | first }}"
-        software_name: "{{ item.name }}"
         software_target_dir: "{{ BUILD_TARGET_DIR }}/{{ item.name }}"
+        service_name: "{{ item.name | replace('-', '') }}"
       loop: "{{ build_config.software }}"
 
     - name: For bind create etc/bind directory.
@@ -51,8 +51,8 @@
         state: directory
       vars:
         software_type: "{{ item.name | split('-', 1) | first }}"
-        software_name: "{{ item.name }}"
         software_target_dir: "{{ BUILD_TARGET_DIR }}/{{ item.name }}"
+        service_name: "{{ item.name | replace('-', '') }}"
       loop: "{{ build_config.software }}"
       when: software_type == 'bind'
 
@@ -67,7 +67,6 @@
         dest: "{{ software_target_dir }}/etc/{{ software_type }}/{{ software_type }}.conf"
       vars:
         software_type: "{{ item.0.name | split('-', 1) | first }}"
-        software_name: "{{ item.0.name }}"
         software_target_dir: "{{ BUILD_TARGET_DIR }}/{{ item.0.name }}"
         cfg: "{{ item.0.cfg }}"
         listen_addrs:
@@ -79,6 +78,8 @@
 
     - name: (Re)Start name servers.
       ansible.builtin.service:
-        name: "{{ item.name }}"
+        name: "{{ service_name }}"
         state: restarted
       loop: "{{ build_config.software }}"
+      vars:
+        service_name: "{{ item.name | replace('-', '') }}"
