--- a/auto/ansible/tasks/read_build_configuration.yml
+++ b/auto/ansible/tasks/read_build_configuration.yml
@@ -14,6 +14,10 @@
     url: "{{ item.url }}"
     make_str: "{{ software_build_config.templates[item.make_str] }}"
     files_copy: "{{ ('files_copy' in item and item.files_copy) or [] }}"
+    listen_ipv4: "{{ 'listen_ipv4' in item and item.listen_ipv4 }}"
+    outgoing_ipv4: "{{ 'outgoing_ipv4' in item and item.outgoing_ipv4 }}"
+    outgoing_ipv6: "{{ 'outgoing_ipv6' in item and item.outgoing_ipv6 }}"
+    software_sname: "{{ item.name.split('-')[0] }}"
     # This is needed when delegate_to is used to preserve the hostname
     # since Ansible uses the delegate_to hostname as the inventory_hostname
     software_name: "{{ item.name }}"
