--- a/auto/ansible/tasks/install_server_packages_linux.yml
+++ b/auto/ansible/tasks/install_server_packages_linux.yml
@@ -1,6 +1,6 @@
 ---
-- name: (Linux) Install packages for building.
+- name: (Linux) ~ " {{ task_title | default('Install packages') }}."
   ansible.builtin.apt:
     pkg: "{{ server_packages }}"
-    state: present
+    state: "{{ package_state | default('present') }}"
     update_cache: yes
