--- a/auto/ansible/tasks/install_server_packages_centos.yml
+++ b/auto/ansible/tasks/install_server_packages_centos.yml
@@ -5,7 +5,7 @@
       - epel-release
     state: present
 
-- name: (CentOS) ~ " {{ task_title | default('Install packages') }}."
+- name: "(CentOS) {{ task_title | default('Install packages') }}."
   ansible.builtin.yum:
     name: "{{ server_packages }}"
     state: "{{ package_state | default('present') }}"
