--- a/auto/ansible/tasks/install_server_packages_linux.yml
+++ b/auto/ansible/tasks/install_server_packages_linux.yml
@@ -1,5 +1,5 @@
 ---
-- name: (Linux) ~ " {{ task_title | default('Install packages') }}."
+- name: "(Linux) {{ task_title | default('Install packages') }}."
   ansible.builtin.apt:
     pkg: "{{ server_packages }}"
     state: "{{ package_state | default('present') }}"
