--- a/auto/ansible/tasks/inception/incept.yml
+++ b/auto/ansible/tasks/inception/incept.yml
@@ -6,23 +6,24 @@
       - incept_playbook is defined
       - incept_task is defined
       - incept_variables is defined
-      - incept_copy_files is defined and incept_copy_files is iterable
     fail_msg: "Not all required variables present!"
     quiet: true
 
-- name: Remove possible leftover inception state.
+- name: Ensure local_ansible directory is there.
   ansible.builtin.file:
     path: /root/local_ansible
-    state: absent
-
-- name: Create local ansible dir structure.
-  ansible.builtin.file:
-    path: "{{ item }}"
     state: directory
+
+- name: Populate local_ansible.
+  ansible.posix.synchronize:
+    src: "{{ item }}/"
+    dest: "/root/local_ansible/{{ item }}"
+    delete: true
+    recursive: true
   loop:
-    - /root/local_ansible/files
-    - /root/local_ansible/tasks/inception
-    - /root/local_ansible/templates
+    - files
+    - tasks
+    - templates
 
 - name: Copy over inception playbook.
   ansible.builtin.copy:
@@ -39,15 +40,11 @@
     src: templates/inception_variables.yml.j2
     dest: /root/local_ansible/inception_variables.yml
 
-- name: Copy over extra files.
-  ansible.builtin.copy:
-    src: "{{ item }}"
-    dest: "/root/local_ansible/{{ item }}"
-  loop: "{{ incept_copy_files }}"
-
 - name: "{{ incept_title }} (Output per incepted host when done)"
   ansible.builtin.shell:
     cmd: "{{ ansible_playbook_path | default('ansible-playbook') }} -f {{ cpus }} /root/local_ansible/inception_playbook.yml"
   environment:
     # Easier to read the output when something goes wrong.
     ANSIBLE_STDOUT_CALLBACK: yaml
+    # Explicitly set the locale in case the user passes something funny.
+    LC_ALL: 'en_US.UTF-8'
