--- a/auto/ansible/tasks/network_provision_linux.yml
+++ b/auto/ansible/tasks/network_provision_linux.yml
@@ -18,3 +18,15 @@
 
   - ansible.builtin.include_tasks:
       file: tasks/network_restart_linux.yml
+
+  - name: (Linux) Set rc.local.
+    ansible.builtin.template:
+      src: templates/rc.local_linux.j2
+      dest: /etc/rc.local
+      owner: root
+      group: root
+      mode: "u+x"
+
+  - name: (Linux) Source rc.local.
+    ansible.builtin.shell:
+      cmd: ". /etc/rc.local"
