--- a/auto/ansible/test_root_servers.yml
+++ b/auto/ansible/test_root_servers.yml
@@ -15,14 +15,28 @@
       delegate_to: resolvers-vm
 
 # Test that the root servers' MTU settings (if any) are applied correctly.
-    - ansible.builtin.include_tasks:
-        file: tasks/net_ping.yml
+    - block:
+      - ansible.builtin.include_tasks:
+          file: tasks/net_ping.yml
+        vars:
+          title: "Test v{{ version }} exact MTU."
+          mtu: "{{ this_mtu }}"
+        loop: [4, 6]
+        loop_control:
+          loop_var: version
+
+      - ansible.builtin.include_tasks:
+          file: tasks/net_ping.yml
+        vars:
+          title: "Test v{{ version }} larger MTU."
+          mtu: "{{ (this_mtu | int) + 1 }}"
+          must_fail: true
+        loop: [4, 6]
+        loop_control:
+          loop_var: version
+
       vars:
-        mtu: "{{ network_configuration.networks.0['v' ~ version].mtu + 1 }}"
+        this_mtu: "{{ network_configuration.networks.0['v' ~ version].mtu - (version == 4 and 28 or 48) }}"
         destinations:
           - "{{ hostvars['gateway-vm'].network_configuration.networks.1['v' ~ version].addr | dirname }}"
-        must_fail: true
-      loop: [4, 6]
-      loop_control:
-        loop_var: version
-      when: "network_configuration.networks.0['v' ~ version] is defined and network_configuration.networks.0['v' ~ version].mtu is defined"
+      when: "network_configuration.networks.0['v' ~ version].mtu is defined"
