--- a/auto/ansible/servers-vm-select-scenario.yml
+++ b/auto/ansible/servers-vm-select-scenario.yml
@@ -1,3 +1,22 @@
+# Configure servers-vm with nameserver software and zone
+# ------------------------------------------------------
+# Required variables:
+#
+# - scenario: The zones for the naming scheme scenario to configure [1-6]
+#
+# - software: The software to serve the zones [ bind | nsd | knot ]
+#
+# Optional variables:
+#
+# - variant: [ true | *false* ]
+#            Alternative for the naming scheme scenario. 
+#            Scenarios 3, 5 and 6 have a variant.
+#
+# - realips: [ *true* | false ]
+#            Use in the zones, the same IP addresses for the root servers
+#            as they currently use on the internet. Also the names in the
+#            zones match more closely the ones that were used in section 5
+#            of the RSSAC028 document.
 ---
 - hosts: servers-vm
   gather_facts: false
@@ -8,7 +27,35 @@
       that:
         - scenario is defined and scenario in ['1', '2', '3', '4', '5', '6']
         - software is defined and software | lower in ['bind', 'nsd', 'knot']
-      fail_msg: "usage: ansible-playbook --extra-vars \"scenario=[1-6] software=[bind | nsd | knot]\""
+        - variant is not defined or variant == 'false' or variant == 'true'
+        - realips is not defined or realips == 'false' or realips == 'true'
+      fail_msg: "usage: ansible-playbook --extra-vars \"scenario=[1-6] software=[bind | nsd | knot] variant=[*false* | true] realips=[*true* | false]\""
+
+  - name: Set variant to boolean value (if given)
+    when: variant is defined
+    ansible.builtin.set_fact:
+      do_variant: "{{ variant | bool }}"
+
+  - name: Set variant to false (if not given)
+    when: variant is not defined
+    ansible.builtin.set_fact:
+      do_variant: false
+
+  - name: Set realips to boolean value (if given)
+    when: realips is defined
+    ansible.builtin.set_fact:
+      do_realips: "{{ realips | bool }}"
+
+  - name: Set realips to true (if not given)
+    when: realips is not defined
+    ansible.builtin.set_fact:
+      do_realips: true
+
+  - debug:
+      var: do_variant
+
+  - debug:
+      var: do_realips
 
   - name: Set implementation from software
     when: item.name | lower == software | lower
