--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -98,6 +98,7 @@ Vagrant.configure(2) do |config|
 
       # Normal Vargant box configuration
       h.vm.box = vm_conf['box']
+      h.vm.box_version = get_value vm_conf, 'box_version', otherwise: '>=0'
       h.vm.provider "virtualbox" do |v|
         v.name = vhost
         v.cpus = vm_conf['cpus']
