--- a/auto/ansible/tasks/network_provision_centos.yml
+++ b/auto/ansible/tasks/network_provision_centos.yml
@@ -25,3 +25,15 @@
 
   - ansible.builtin.include_tasks:
       file: tasks/network_restart_centos.yml
+
+  - name: (CentoOS) Set rc.local.
+    ansible.builtin.template:
+      src: templates/rc.local_linux.j2
+      dest: /etc/rc.local
+      owner: root
+      group: root
+      mode: "u+x"
+
+  - name: (CentoOS) Source rc.local.
+    ansible.builtin.shell:
+      cmd: ". /etc/rc.local"
