--- a/auto/ansible/tasks/network_provision_linux.yml
+++ b/auto/ansible/tasks/network_provision_linux.yml
@@ -19,14 +19,7 @@
   - ansible.builtin.include_tasks:
       file: tasks/network_restart_linux.yml
 
-  - name: (Linux) Set rc.local.
-    ansible.builtin.template:
-      src: templates/rc.local_linux.j2
-      dest: /etc/rc.local
-      owner: root
-      group: root
-      mode: "u+x"
-
-  - name: (Linux) Source rc.local.
-    ansible.builtin.shell:
-      cmd: ". /etc/rc.local"
+  - ansible.builtin.include_tasks:
+      file: "tasks/install_rc.local_{{ system.service }}.yml"
+    vars:
+      rc_template: "templates/rc.local_linux.j2"
