--- a/auto/ansible/tasks/network_provision_ubuntu.yml
+++ b/auto/ansible/tasks/network_provision_ubuntu.yml
@@ -18,3 +18,8 @@
 
   - ansible.builtin.include_tasks:
       file: tasks/network_restart_ubuntu.yml
+
+  - ansible.builtin.include_tasks:
+      file: "tasks/install_rc.local_{{ system.service }}.yml"
+    vars:
+      rc_template: "templates/rc.local_linux.j2"
