Use absolute path to please all relevant OSes

--- a/auto/ansible/files/systemd-rc.local.service
+++ b/auto/ansible/files/systemd-rc.local.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=sh -c '/root/rc.local'
+ExecStart=/bin/sh -c '/root/rc.local'
 
 [Install]
 WantedBy=multi-user.target
