--- a/auto/ansible/tasks/set_zone_cfg_scenario_3.1.yml
+++ b/auto/ansible/tasks/set_zone_cfg_scenario_3.1.yml
@@ -1,12 +1,12 @@
 ---
-- name: Set the zones for scenario 3 with real IPs
+- name: Set the zones for scenario 3.1 with real IPs
   ansible.builtin.set_fact:
     zone_cfg:
-      - [".", "{{ ZONE_DIR }}/5.3-root"]
+      - [".", "{{ ZONE_DIR }}/5.3.1-root"]
   when: do_realips is not defined or do_realips is true
 
-- name: Set the zones for scenario 3 without real IPs
+- name: Set the zones for scenario 3.1 without real IPs
   ansible.builtin.set_fact:
     zone_cfg:
-      - [".", "{{ ZONE_DIR }}/3/root.zone"]
+      - [".", "{{ ZONE_DIR }}/3/root_.zone"]
   when: do_realips is defined and do_realips is false
