--- a/auto/ansible/tasks/set_zone_cfg_scenario_4.yml
+++ b/auto/ansible/tasks/set_zone_cfg_scenario_4.yml
@@ -1,6 +1,15 @@
 ---
-- name: Set the zones for scenario 4
+- name: Set the zones for scenario 4 with real IPs
+  ansible.builtin.set_fact:
+    zone_cfg:
+      - [".", "{{ ZONE_DIR }}/5.4-root"]
+      - ["root-servers.", "{{ ZONE_DIR }}/5.4-root-servers"]
+  when: do_realips is not defined or do_realips is true
+
+- name: Set the zones for scenario 4 without real IPs
   ansible.builtin.set_fact:
     zone_cfg:
       - [".", "{{ ZONE_DIR }}/4/root.zone"]
       - ["some-servers.", "{{ ZONE_DIR }}/4/some-servers.zone"]
+  when: do_realips is defined and do_realips is false
+
