--- a/auto/ansible/tasks/configure_resolver.yml
+++ b/auto/ansible/tasks/configure_resolver.yml
@@ -15,7 +15,30 @@
     block:
     - name: Configure BIND
       when: software_sname == 'bind'
-      ansible.builtin.meta: noop
+      block:
+      - name: Create {{ this_target_dir }}/etc/bind directory
+        ansible.builtin.file:
+          path: "{{ this_target_dir }}/etc/bind"
+          state: directory
+          mode: '0755'
+          
+      - name: Copy bind.keys
+        ansible.builtin.copy:
+          src: files/bind.keys
+          dest: "{{ this_target_dir }}/etc/bind.keys"
+
+      - name: Install (templated) unbound.conf
+        ansible.builtin.template:
+          src: "templates/resolvers/{{ software_sname }}.conf.j2"
+          dest: "{{ this_target_dir }}/etc/bind/bind.conf"
+
+      - ansible.builtin.include_tasks:
+          file: "tasks/install_server_service_systemd.yml"
+        vars:
+          software_type: "{{ software_sname }}"
+          software_target_dir: "{{ this_target_dir }}"
+          service_name: "{{ software_name | replace('-', '') | replace ('.', '') }}"
+          n_cpus: 1
 
     - name: Configure Unbound
       when: software_sname == 'unbound'
@@ -43,6 +66,6 @@
     
       - name: stop resolver (if running)
         ansible.builtin.shell:
-          cmd: "PATH={{ this_target_dir }}/bin:{{ this_target_dir }}/sbin:$PATH unbound-control stop"
+          cmd: "PATH={{ this_target_dir }}/bin:{{ this_target_dir }}/sbin:$PATH unbound-control stop || rm -f '{{ this_target_dir }}/etc/unbound/unbound.pid'"
           chdir: "{{ this_target_dir }}"
         when: unbound_pid.stat.exists
