--- a/auto/ansible/tasks/start_resolver.yml
+++ b/auto/ansible/tasks/start_resolver.yml
@@ -16,10 +16,10 @@
     - name: Configure BIND
       when: software_sname == 'bind'
       block:
-      - name: Stop {{ software_name }}
+      - name: Start {{ software_name }}
         ansible.builtin.service:
           name: "{{ service_name }}"
-          state: stopped
+          state: started
         vars:
           service_name: "{{ software_name | replace('-', '') | replace ('.', '') }}"
 
@@ -31,8 +31,8 @@
           path: "{{ this_target_dir }}/etc/unbound/unbound.pid"
         register: unbound_pid
     
-      - name: Stop resolver (if running)
+      - name: Start resolver (if not running)
         ansible.builtin.shell:
-          cmd: "PATH={{ this_target_dir }}/bin:{{ this_target_dir }}/sbin:$PATH unbound-control stop || rm -f '{{ this_target_dir }}/etc/unbound/unbound.pid'"
+          cmd: "PATH={{ this_target_dir }}/bin:{{ this_target_dir }}/sbin:$PATH unbound-control start"
           chdir: "{{ this_target_dir }}"
-        when: unbound_pid.stat.exists
+        when: not unbound_pid.stat.exists
