--- a/auto/ansible/tasks/read_build_configuration.yml
+++ b/auto/ansible/tasks/read_build_configuration.yml
@@ -18,9 +18,11 @@
     outgoing_ipv4: "{{ 'outgoing_ipv4' in item and item.outgoing_ipv4 }}"
     outgoing_ipv6: "{{ 'outgoing_ipv6' in item and item.outgoing_ipv6 }}"
     software_sname: "{{ item.name.split('-')[0] }}"
+    ready2run: "{{ item.name.split('-')[0] in ['bind', 'unbound'] }}"
     # This is needed when delegate_to is used to preserve the hostname
     # since Ansible uses the delegate_to hostname as the inventory_hostname
     software_name: "{{ item.name }}"
+    service_name: "{{ item.name | replace('-', '') | replace ('.', '') }}"
   loop: "{{ software_build_config.software }}"
 
 - name: Make sure the needed directories are there.
