--- a/auto/ansible/select-scenario-on-root-servers.yml
+++ b/auto/ansible/select-scenario-on-root-servers.yml
@@ -147,8 +147,8 @@
       software_type: "{{ build_config.software.0.name | split('-', 1) | first }}"
       software_target_dir: "{{ BUILD_TARGET_DIR }}/{{ build_config.software.0.name }}"
       cfg: "{{ build_config.software.0.cfg }}"
-      listen_addrs: "{{ network_configuration.networks.0.v4.alias }}"
-      listen_addrs_6: "{{ network_configuration.networks.0.v6.alias }}"
+      listen_addrs: "{{ network_configuration.networks.0.v4.alias | map('dirname') }}"
+      listen_addrs_6: "{{ network_configuration.networks.0.v6.alias | map('dirname') }}"
 
   - name: (Re)Start name servers.
     ansible.builtin.service:
